🐛 fix(Theme): the background color of scollbar still light in dark mode (#1612)

--- a/src/Masa.Blazor/wwwroot/css/masa-blazor.extend.css
+++ b/src/Masa.Blazor/wwwroot/css/masa-blazor.extend.css
@@ -1,4 +1,12 @@
-﻿/* fixed-right in datatable */
+﻿.theme--light.m-application {
+    color-scheme: light;
+}
+
+.theme--dark.m-application {
+    color-scheme: dark;
+}
+
+/* fixed-right in datatable */
 .m-data-table--fixed-header > .m-data-table__wrapper > table > thead > tr > th {
     z-index: 2 !important;
 }
